dnl
dnl Configuring wiliki
dnl Process this file with autoconf to generate 'configure'.
dnl
dnl $Id: configure.in,v 1.8 2004-02-10 04:27:51 shirok Exp $
AC_INIT(WiLiKi, 0.5_pre2, shiro@acm.org)
AC_GAUCHE_INIT_EXT

dnl Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(site)

dnl Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

dnl Check for other programs.
AC_PROG_INSTALL

dnl Add more test

dnl Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

dnl Output
echo $PACKAGE_VERSION > VERSION
AC_OUTPUT(src/Makefile test/Makefile)
